# NoiseMap

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  LICENSE  README.md  generate_dataset.py  main.cpp  scene.cpp  scene.h
Data/: test.ply  ville.ply  ville_colored.ply  ville_noisemap.ply
RayTracer/: CMakeLists.txt  CMakeLists.txt.bak  acoustic_model.cpp  acoustic_model.h  optix_ray.cu  optix_ray.h  ray_tracer.cpp  ray_tracer.h
